tests/examples/bad/invalid_type_comparison1.lat
int main() {
    string s1, s2;
    int a;
    a == s1;
    return 1;
}